<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_height="300dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#DF1F2259"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/holo_green_light">

            <TextView
                android:id="@+id/warning_text"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:layout_marginTop="36dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/quit"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.942"
                app:layout_constraintStart_toEndOf="@+id/warning_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="266dp"
                android:layout_height="76dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="ARE YOU SURE YOU WANT TO\n QUIT THE GAME ?"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/warning_text"
                app:layout_constraintVertical_bias="0.125" />

            <Button
                android:id="@+id/btn_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="#FFEB3B"
                android:text="@string/yes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.505" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="#FFEB3B"
                android:text="@string/no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.505" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>