<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="#DF1F2259"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/mute_mute"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:thumb="@drawable/ic_mute"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.228" />

            <ImageButton
                android:id="@+id/button_refresh"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.277"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/resetBoardBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_reset_board"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_refresh"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/mute_mute"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.277"
                tools:ignore="ContentDescription" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetBoardBtn">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:flow_horizontalAlign="center"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/mute_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/mute"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/restartRound"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/resetGame"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>