<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#050232"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tictactoeText"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/tic_tac_toe"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tictactoeText"
            android:backgroundTint="#050232"
            android:drawableLeft="@drawable/ic_more" />




    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="7dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/text_view_p1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:freezesText="true"
                android:text="@string/player_X"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_view_p2"
                android:fontFamily="sans-serif"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/player_O"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights">
        </Button>

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_10"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights">
        </Button>

        <Button
            android:id="@+id/button_11"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#3B1D566E"
            android:freezesText="true"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/button_12"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights">
        </Button>

        <Button
            android:id="@+id/button_21"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/button_22"
            android:layout_width="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="#3B1D566E"
            android:textSize="60sp"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

    </LinearLayout>
    <TextView
        android:id="@+id/playerTurn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player_X_turn"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:freezesText="true"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:padding="5dp">
    </TextView>

</LinearLayout>